# qt_multiprocess_demo

./: CMakeLists.txt  README.md  main.cpp
common/: common.h  sharedmemory_manager.cpp  sharedmemory_manager.h
dataview/: mainwindow.cpp  mainwindow.h
storage/: storage.cpp  storage.h
